운전자보험 클라이언트페이지 업데이트

--- a/src/app/apps/join/join.component.html
+++ b/src/app/apps/join/join.component.html
@@ -2,7 +2,8 @@
 <main class="join-container">
     <header class="top-toolbar">
         <div class="font-back-box" (click)="moveBack()">
-            <fa-icon [icon]="faArrowLeft"></fa-icon>
+            <!-- <fa-icon [icon]="faArrowLeft"></fa-icon> -->
+            <img src="/assets/image/ic_24_back_black.svg" alt="">
         </div>
         
     </header>
