--- a/src/app/pages/join/user-form/user-form.component.html
+++ b/src/app/pages/join/user-form/user-form.component.html
@@ -72,14 +72,15 @@
 
             
         </form>
-
-
-        <button class="btn btn-primary next-button" (click)="next()" [disabled]="form.invalid">다음</button>
-
         
     </section>
     
 
+    <div class="sticky-button-area">
+
+        <button class="btn btn-primary next-button" (click)="next()" [disabled]="form.invalid">다음</button>
+        
+    </div>
 
 
 
