--- a/src/app/apps/insu-request/insu-request.component.html
+++ b/src/app/apps/insu-request/insu-request.component.html
@@ -1,1 +1,84 @@
-<p>insu-request works!</p>
+<main>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+        <div class="container-fluid">
+          <a class="navbar-brand" [routerLink]="'.'">Responsive navbar</a>
+      
+          <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
+          <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
+            &#9776;
+          </button>
+      
+          <!-- Step 2: Add the ngbCollapse directive to the element below. -->
+          <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <!-- Step 4: Close the menu when a link is clicked. -->
+                <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Examples</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">About</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    
+      <section class="page-header">
+        <h1 class="page-title section-title">탄 만큼 내는 운전자보험</h1>
+        <p>운전자보험 간단 설명</p>
+
+        <button>
+            사고접수하기
+        </button>
+
+      </section>
+      
+      <section>
+        <h2 class="section-title">상품내용</h2>
+
+
+        <h6>담보 및 보험료 내용</h6>
+        <table>
+          <thead>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            
+          </tbody>
+        </table>
+      </section>
+
+      <section>
+        <h2 class="section-title">약관안내</h2>
+      </section>
+
+      <section>
+        <h2 class="section-title">자주 묻는 질문</h2>
+      </section>
+
+      <section>
+        <h2 class="section-title">문의하기</h2>
+      </section>
+
+      <footer>
+
+      </footer>
+</main>
