--- a/src/app/pages/join/insurance-information/insurance-information.component.scss
+++ b/src/app/pages/join/insurance-information/insurance-information.component.scss
@@ -1,5 +1,5 @@
 .insurance-information-container{
-    padding: 0px 20px 20px 20px;
+    padding: 0px 20px 0px 20px;
     
 }
 
@@ -48,7 +48,8 @@
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
-            color: rgba(38, 45, 57, 0.52);
+            // color: rgba(38, 45, 57, 0.52);
+            color: #262D39;
             margin-bottom: 0;
         }
         dd{
@@ -84,6 +85,12 @@
 #product-information-list{
     margin-bottom: 0;
     padding: 20px 0;
+    dl{
+        padding-left: 8px;
+    }
+    dd{
+        padding-right: 8px;
+    }
 }
 
 #guarantee-list{
@@ -139,6 +146,12 @@
     li{
         height: 50px;
         border-top: 1px solid #F5F6F7;
+        dl{
+            padding-left: 8px;
+        }
+        dd{
+            padding-right: 8px;
+        }
     }
     li:last-child{
         border-bottom: 1px solid #F5F6F7;
@@ -154,16 +167,32 @@
     }
 }
 
+.sticky-button-area{
+    position: sticky;
+    bottom: 0px;
+    background-color: white;
+    padding-top: 8px;
+    padding-bottom: 20px;
+}
+
 #next-button{
     height: 52px;
     background-color: #3581FF;
     width: 100%;
+}
+#next-button:disabled{
+    background-color: rgba(38, 45, 57, 0.08);
+    color: rgba(38, 45, 57, 0.16);
+    border: none;
+    border-radius: 4px;
 }
 
 
 .modal-content{
     margin: 0;
     border-radius: 0;
+    border: none;
+    
 }
 
 .modal-header{
@@ -172,89 +201,7 @@
 
 .modal-dialog{
     max-width: none;
-}
-::ng-deep .my-class-check-join-available-modal .modal-dialog { 
-
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    .modal-content{
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
-        padding: 20px 10px 10px 10px;
-    }
     
-    .title{
-        text-align: center;
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 20px;
-    }
-    .sub-title{
-        text-align: center;
-        font-size: 16px;
-        color: rgba(38, 45, 57, 0.72);
-    }
-    .color-blue{
-        color:#3581FF
-    }
-
-    .check-button-box{
-        display: flex;
-        justify-content: center;
-        .check-button{
-            margin: 5px;
-            width: 156px;
-            height: 52px;
-            border-radius: 4px;
-        }
-
-        .fail-button{
-            border: 1px solid rgba(38, 45, 57, 0.16);
-            background-color: white;
-        }
-        .success-button{
-            background: #3581FF;
-            border-radius: 4px;
-            color: white;
-        }
-    }
-    
-}
-
-
-::ng-deep .my-class-check-fail-modal .modal-dialog {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    .modal-content{
-        
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
-        padding: 20px 10px 10px 10px;
-    }
-
-    .faCircleExclamation-box{
-        color: #DD3B3B;
-        text-align: center;
-        font-size: 36px;
-    }
-
-    .content{
-        font-weight: 700;
-        font-size: 18px;
-        color: #262D39;
-        text-align: center;
-    }
-
-    .btn-close{
-        width: 100%;
-        background: #3581FF;
-        border-radius: 4px;
-        color: white;
-        height: 52px;
-    }
 }
 
 
@@ -308,7 +255,7 @@
     table{
         width: 100%;
         padding: 0 10px;
-        border-top: 1px solid black;
+        border-top: 1px solid rgba(38, 45, 57, 0.72);;
         margin-bottom: 30px;
         font-size: 14px;
         .cell-left{
@@ -408,4 +355,103 @@
         }
     }
 
+}
+
+
+::ng-deep .my-class-check-join-available-modal .modal-dialog { 
+
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    
+    .modal-content{
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        padding: 20px 10px 10px 10px;
+        box-shadow: 0px 4px 16px 0px;
+    }
+    
+    .title{
+        text-align: center;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+    }
+    .sub-title{
+        text-align: center;
+        font-size: 16px;
+        color: rgba(38, 45, 57, 0.72);
+    }
+    .color-blue{
+        color:#3581FF
+    }
+
+    .check-button-box{
+        display: flex;
+        justify-content: center;
+        .check-button{
+            margin: 5px;
+            width: 156px;
+            height: 52px;
+            border-radius: 4px;
+        }
+
+        .fail-button{
+            border: 1px solid rgba(38, 45, 57, 0.16);
+            background-color: white;
+        }
+        .success-button{
+            background: #3581FF;
+            border-radius: 4px;
+            color: white;
+        }
+    }
+    
+}
+
+
+::ng-deep .my-class-check-fail-modal .modal-dialog {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    .modal-content{
+        box-shadow: 0px 4px 16px 0px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        padding: 20px 10px 10px 10px;
+    }
+
+    .faCircleExclamation-box{
+        color: #DD3B3B;
+        text-align: center;
+        font-size: 36px;
+    }
+
+    .content{
+        font-weight: 700;
+        font-size: 18px;
+        color: #262D39;
+        text-align: center;
+    }
+
+    .btn-close{
+        width: 100%;
+        background: #3581FF;
+        border-radius: 4px;
+        color: white;
+        height: 52px;
+    }
+}
+::ng-deep .my-class-modal-full-height{
+    .modal-dialog{
+        margin:0;
+        height: 100%;
+    }
+    
+    .modal-content{
+        border-radius:0%;
+        min-height: 100%;
+        border: none;
+    }
 }
