--- a/src/app/pages/join/user-form/user-form.component.scss
+++ b/src/app/pages/join/user-form/user-form.component.scss
@@ -31,10 +31,16 @@
 
 .next-button{
     // border-radius: 4px;
-    margin-top: 50px;
+    // margin-top: 50px;
     background: #3581FF;
     height: 52px;
     width: 100%;
+}
+.next-button:disabled{
+    background-color: rgba(38, 45, 57, 0.08);
+    color: rgba(38, 45, 57, 0.16);
+    border: none;
+    border-radius: 4px;
 }
 
 .input-box {
@@ -66,5 +72,15 @@
 }
 
 .ng-inValid  {
-    border: 2px solid red; /* green */
+    border: 1px solid red; /* green */
   }
+
+  .sticky-button-area{
+    // width: 90%;
+    position: fixed;
+    bottom: 0px;
+    left: 20px;
+    right: 20px;
+    background-color: white;
+    padding-bottom: 20px;
+}
