--- a/src/app/pages/join/insurance-information/insurance-information.component.html
+++ b/src/app/pages/join/insurance-information/insurance-information.component.html
@@ -37,7 +37,7 @@
         <ul id="guarantee-list">
             <li class="description-content">
                 <dl>
-                    <img src="/assets/image/repair.svg" alt="">
+                    <img src="/assets/image/img_settlement.svg" alt="">
                 </dl>
                 <dd>
                     <h6 class="guarantee-title">형사합의금</h6> 
@@ -46,7 +46,7 @@
             </li>
             <li class="description-content">
                 <dl>
-                    <img src="/assets/image/carpool.svg" alt="">
+                    <img src="/assets/image/img_lawyer.svg" alt="">
                 </dl>
                 <dd>
                     <h6 class="guarantee-title">변호사 선임비</h6>
@@ -56,7 +56,7 @@
             </li>
             <li class="description-content">
                 <dl>
-                    <img src="/assets/image/tpointtown.svg" alt="">
+                    <img src="/assets/image/img_penalty.svg" alt="">
                 </dl>
                 <dd>
                     <h6 class="guarantee-title">벌금보상</h6>
@@ -140,45 +140,121 @@
     <div class="modal-body">
         <div class="content-box">
             <h3 class="modal-title">꼭 알아두실 내용</h3>
-            <p>이 상품은 “DB손해보험 고객사랑보험(플랫폼전용)” 입니다.
-                보험계약 전 약관을 확인하시기 바랍니다. 
+            <p>
+                DB손해보험(이하 ‘회사’)은 해당 상품에 대해 충분히 설명할 의무가 있으며, 가입자는 가입에 앞서 이에 대한 충분한 설명을 받으시기 바랍니다.
             </p>
         </div>
 
-        
+
         <div class="content-box">
-            <h4 class="content-title">단체보험계약</h4>
-            <ul class="no-padding-left">
-                <li>본 보험 계약은 카카오모빌리티를 계약자, 카카오모빌리티 회원 중 가입 고객을 피보험자, 카카오모빌리티 회원 중 가입고객 및 법정상속인을 보험수익자로 하는 단체계약입니다.</li>
-                <li>본 보험계약은 단체형으로 운영하여 청약철회 및 품질보증 해지대상이 아닙니다.</li>
-                <li>본 보험계약은 단체형으로 운영하여 연말정산 시 소득공제대상이 아닙니다.</li>
-            </ul>
+            <h4 class="content-title">가입 시 필수 확인사항</h4>
+            <p>보험계약 청약 시에는 보험상품명, 보험료, 보험료 납입기간, 보험료 납입방법, 피보험자 등을 반드시 확인하시고, 보험약관 및 상품설명서를 반드시 수령, 읽어 보시기 바랍니다. 더불어, 본 내용은 약관을 기초하여 인터넷 자료로 요약한 것으로 보험금의 지급사유, 보험금을 지급하지 않는 사유 및 제반사항 등 기타 자세한 사항은 약관 및 상품 요약서를 반드시 참조해주시기 바랍니다.</p>
         </div>
 
         <div class="content-box">
-            <h4 class="content-title">만기환급금</h4>
-            <p>본 상품은 순수보장성 상품으로 만기 시 만기환급금이 없으며 또한 보험계약대출제도가 없습니다.</p>
+            <h4 class="content-title">상품 특이사항 및 배당 여부</h4>
+            <p>본 상품은 소멸성의 순수보장성 보험으로 만기 시 만기환급금이 없고 보험계약대출 제도도 없으며, 배당도 지급되지 않습니다.</p>
         </div>
 
         <div class="content-box">
-            <h4 class="content-title">예금자보호 안내</h4>
-            <p>이 보험계약은 예금자보호법에 따라, 예금보험공사가 보호하되, 보호한도는 본 보험회사에 있는 귀하의 모든 예금보험 대상 금융상품의 해약환급금(또는 만기 시 보험금이나 사고 보험금)에 기타 지급금을 합하여 1인당 “최고 5천만원"이며, 5천만원을 초과하는 나머지 금액은 보호하지 않습니다. 다만, 보험계약자 및 보험료 납부자가 법인인 보험계약은 예금자보호법에 따라 예금보험공사가 보호하지 않습니다.</p>
+            <h4 class="content-title">기존 계약해지 후 타보험 계약 시 유의사항</h4>
+            <p>보험계약자가 기존 보험계약을 해지하고 다른 보험계약을 체결하면 보험계약이 거절될 수 있으며, 보험료가 인상되거나 보장내용이 달라질 수 있습니다.</p>
         </div>
         
-        <div class="content-box">
-            <h4 class="content-title">보험계약을 할 때</h4>
-            <p>보험계약 시에는 보험상품명, 보험기간, 보험료, 보험료납입기간, 피보험자 등을 반드시 확인하시고, 자세한 상품내용은 반드시 보험약관을 확인하시기 바랍니다.</p>
-        </div>
-
         <div class="content-box">
             <h4 class="content-title">가입자의 계약 전 알릴 의무</h4>
-            <p>계약자 또는 피보험자는 보험계약 청약 시 청약서(질문서를 포함합니다)의 질문사항에 대하여 알고 있는 내용을 반드시 사실대로 알려야합니다. 그렇지 않은 경우 보험금의 지급이 거절되거나 보험계약이 해지될 수 있습니다.</p>
+            <p>계약자 또는 피보험자는 보험계약 청약시 청약서(질문서를 포함합니다)의 질문사항에 대하여 알고 있는 내용을 반드시 사실대로 알려야 합니다. 그렇지 않은 경우에는 보험금의 지급이 거절될 수 있습니다.</p>
         </div>
 
         <div class="content-box">
-            <h4 class="content-title">계약해지 후 다른 보험 계약 시 유의사항</h4>
-            <p>보험계약자가 기존에 체결했던 보험계약을 해지하고 다른 보험계약을 체결하면 보험인수가 거절되거나 보험료가 인상되거나 보장내용이 달라질 수 있습니다.</p>
+            <h4 class="content-title">계약 후 알릴 의무</h4>
+            <p>계약자 또는 피보험자는 보험계약을 맺은 후 보험약관에 정한 계약 후 알릴 의무사항이 발생하였을 경우 (예시: 직업 또는 직무의 변경, 이륜자동차 또는 원동기장치자전거의 계속적 사용 등) 지체없이 회사에 알려야 합니다. 그렇지 않은 경우에는 보험금의 지급이 거절 될 수 있습니다.</p>
         </div>
+
+        <div class="content-box">
+            <h4 class="content-title">비례보상 안내</h4>
+            <p>배상책임, 교통사고처리지원금, 벌금 등의 특약은 보험금을 지급할 다수의 보험계약(공제계약포함)이 체결되어 있는 경우, 약관에 따라 비례하여 보상합니다.</p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">청약의 철회</h4>
+            <p>계약자 및 피보험자는 보험계약 체결 시 입력한 보험기간이 개시되기 전에는 보험계약 청약을 취소할 수 있습니다. 계약자 및 피보험자는 는 보험증권을 받은 날로부터 15일(계약을 청약한 날부터 30일(다만, 만 65세 이상의 피보험자가 전화를 통해 체결한 계약은 45일)) 이내에 청약을 철회할 수 있으며, 이 경우 회사는 3영업일 이내에 납입한 보험료를 돌려드립니다.</p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">품질보증제도</h4>
+            <p>회사가 약관 및 계약자보관용 청약서를 청약할 계약자에게 전달하지 않거나 약관의 중요한 내용을 설명하지 않은 때, 또는 계약을 체결할 때 계약자가 청약서에 자필서명(날인(도장을 찍음) 및 전자서명법 제2조 제2호에 따른 전자서명을 포함합니다)을 하지 않을 때에는 계약자는 계약이 성립한 날로부터 3개월 이내에 계약을 취소할 수 있습니다. 이 경우 보험사는 이미 납입한 보험료를 계약자에게 돌려 드리며, 보험료를 받은 기간에 대하여 보험개발원이 공시하는 보험계약대출이율을 연단위 복리로 계산한 금액을 더하여 지급합니다.</p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">보장개시일(책임개시일)</h4>
+            <p>계약의 청약을 승낙하면 이 계약의 약관에 따라 보장을 개시합니다. 다만, 온디맨드 보험의 특성상 카카오내비를 통해 보험을 적용한 상태에서 사고가 발생하는 경우에만 보상을 진행합니다. 내비를 통해 보험을 적용하지 않은 상태에서 발생한 사고는 보상이 되지 않습니다. 구체적인 사항에 대해서는 반드시 약관을 참조하시기 바랍니다.</p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">계약의 해지</h4>
+            <p>계약자 또는 피보험자는 계약이 소멸하기 전에 언제든지 계약을 해지할 수 있습니다. DB손해보험은 다음과 같은 사실이 있을 경우 그 사실을 안 날부터 1개월 이내에 계약을 해지할 수 있습니다.<br>
+                ① 계약자, 피보험자 또는 보험수익자가 고의로 보험금 지급사유를 발생시킨 경우<br>
+                ② 계약자, 피보험자 또는 보험수익자가 보험금 청구에 관한 서류에 고의로 사실과 다른 것을 기재하였거나 그 서류 또는 증거를 위조 또는 변조한 경우<br>
+            </p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">보험료의 납입 연체로 인한 보험 이용 정지</h4>
+            <p>특정월 보험료 납입이 연체되는 경우 차월부터 카카오내비를 통한 보험이용이 불가합니다. 보험의 이용의 정지에도 불구하고 보험종기까지 계약의 효력(내비에서 보장을 켜는 경우 보험 적용)은 유지되며, 미납 보험료 납부가 완료되면 이후부터 다시 보험의 정상이용이 가능합니다.</p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">해지환급금에 관한 사항</h4>
+            <p>보험기간 만기시 환급금이 없는 상품입니다.</p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">가입제한사항</h4>
+            <p>피보험자의 연령에 따라 가입이 제한될 수 있으며, 만 17세 이하, 만 71이상은 가입이 제한됩니다.</p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">예금자보호법에 따른 보호</h4>
+            <p>이 보험계약은 예금자보호법에 따라 예금보험공사가 보호하되, 보호 한도는 DB손해보험에 있는 귀하의 모든 예금보호대상 금융상품의 해지환급금(또는 만기 시 보험금이나 사고보험금)에 기타지급금을 합하여 1인당 "최고 5천만원"이며, 5천만원을 초과하는 나머지 금액은 보호하지 않습니다.</p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">연말정산 소득공제대상 여부</h4>
+            <p>본 보험계약은 카카오모빌리티를 계약자로, 카카오모빌리티 회원 중 가입 고객을 피보험자로 하는 단체계약이며, 연말정산 소득공제대상 상품이 아닙니다.</p>
+        </div>ㄴ
+
+        <div class="content-box">
+            <h4 class="content-title">보험상담 및 분쟁조정 안내</h4>
+            <p>
+                이 보험계약과 관련하여 의문사항 또는 불만(민원)이 있을 경우 해당 모집자나 콜센터(T. 1588-0100) 또는 인터넷 홈페이지(www.idbins.com) 또는 손해보험협회 상담센터 (T. 02-3702-8500)에 문의할 수 있습니다. <br>
+                분쟁이 발생한 경우에는 금융감독원(국번없이 1332), 한국소비자원(국번없이 1372)등의 도움을 요청할 수 있습니다. 다만, 분쟁조정의 신청 이후 또는 조정신청사건의 처리절차의 진행 중에 일방 당사자가 소를 제기한 경우에는 그 조정의 처리를 중지하고 이를 당사자 쌍방에게 통보합니다. 
+            </p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">보험모집질서 위반행위 신고센터</h4>
+            <p>
+               보류
+            </p>
+        </div>
+
+        <div class="content-box">
+            <h4 class="content-title">금융감독원 보험범죄 신고센터</h4>
+            <p>
+               보류
+            </p>
+        </div>
+
+
+        <div class="content-box">
+            <h4 class="content-title">금융소비자보호법에 관한 사항</h4>
+            <p>
+               보류
+            </p>
+        </div>
+
+
     </div>
 </ng-template>
 
@@ -273,11 +349,11 @@
                 <tbody class="table-body">
                     <tr>
                         <td class="cell-left">교통사고처리지원금(동승자포함)</td>
-                        <td class="cell-right">3,000만원</td>
+                        <td class="cell-right">1.5억원</td>
                     </tr>
                     <tr>
                         <td class="cell-left">자동차사고변호사선임비용(약식기소제외)</td>
-                        <td class="cell-right">500만원</td>
+                        <td class="cell-right">3,000만원</td>
                     </tr>
                     <tr>
                         <td class="cell-left">벌금</td>
