카모 디자인 변경요청 반영

--- a/src/app/pages/join/insurance-information/insurance-information.component.html
+++ b/src/app/pages/join/insurance-information/insurance-information.component.html
@@ -8,7 +8,7 @@
     
     <section class="image-area">
         <div class="image-box">
-            <img src="/assets/image/img_insurance_join_driver.svg" alt="">
+            <img src="/assets/image/img.svg" alt="">
         </div>
         
     </section>
@@ -30,7 +30,7 @@
             </li>   
             <li class="description-content" id="premium-content">
                 <dl>보험료</dl>
-                <dd>1km당 3원 / 익일 1일 후불결제</dd>
+                <dd>1km당 3원 / 익월 1일 후불결제</dd>
             </li> 
         </ul>
     
@@ -163,7 +163,7 @@
         
         <div class="content-box">
             <h4 class="content-title">가입자의 계약 전 알릴 의무</h4>
-            <p>계약자 또는 피보험자는 보험계약 청약시 청약서(질문서를 포함합니다)의 질문사항에 대하여 알고 있는 내용을 반드시 사실대로 알려야 합니다. 그렇지 않은 경우에는 보험금의 지급이 거절될 수 있습니다.</p>
+            <p>계약자 또는 피보험자는 보험계약 청약 시 청약서(질문서를 포함합니다)의 질문사항에 대하여 알고 있는 내용을 반드시 사실대로 알려야 합니다. 그렇지 않은 경우에는 보험금의 지급이 거절될 수 있습니다.</p>
         </div>
 
         <div class="content-box">
@@ -211,7 +211,7 @@
 
         <div class="content-box">
             <h4 class="content-title">가입제한사항</h4>
-            <p>피보험자의 연령에 따라 가입이 제한될 수 있으며, 만 17세 이하, 만 71이상은 가입이 제한됩니다.</p>
+            <p>피보험자의 연령에 따라 가입이 제한될 수 있으며, 만 17세 이하, 만 71세 이상은 가입이 제한됩니다.</p>
         </div>
 
         <div class="content-box">
@@ -222,7 +222,7 @@
         <div class="content-box">
             <h4 class="content-title">연말정산 소득공제대상 여부</h4>
             <p>본 보험계약은 카카오모빌리티를 계약자로, 카카오모빌리티 회원 중 가입 고객을 피보험자로 하는 단체계약이며, 연말정산 소득공제대상 상품이 아닙니다.</p>
-        </div>ㄴ
+        </div>
 
         <div class="content-box">
             <h4 class="content-title">보험상담 및 분쟁조정 안내</h4>
@@ -235,23 +235,35 @@
         <div class="content-box">
             <h4 class="content-title">보험모집질서 위반행위 신고센터</h4>
             <p>
-               보류
+                보험계약과 관련한 보험모집질서 문란행위는 보험업법에 의해 처벌받을 수 있습니다.
             </p>
+            <ul>
+                <li>금융감독원  <br>상담전화 : 국번 없이 1332 <br> 홈페이지 : www.fss.or.kr</li>
+                <li>손해보험협회<br>상담전화 : 02-3702-8585, 8619 <br> 홈페이지 : www.knia.or.kr</li>
+            </ul>
         </div>
 
         <div class="content-box">
             <h4 class="content-title">금융감독원 보험범죄 신고센터</h4>
             <p>
-               보류
+                보험범죄는 보험사기방지 특별법 제8조(보험사기죄)에 의거하여 10년 이하의 징역이나 5천만원 이하의 벌금에 처하며 보험범죄를 교사한 경우에도 동일한 처벌을 받을 수 있습니다.
             </p>
+            <ul>
+                <li>전화 국번없이 1332</li>
+                <li>인터넷 금융감독원 홈페이지(www.fss.or.kr) 내 「보험범죄신고센터」</li>
+                <li>보험범죄신고센터(insucop.fss.or.kr)</li>
+            </ul>
         </div>
 
 
         <div class="content-box">
             <h4 class="content-title">금융소비자보호법에 관한 사항</h4>
-            <p>
-               보류
-            </p>
+            <ul>
+                <li>DB손해보험은 해당 상품에 대해 충분히 설명할 의무가 있으며, 가입자는 가입에 앞서 이에 대한 충분한 설명을 받으시기 바랍니다.</li>
+                <li>카카오모빌리티㈜는 다수의 보험사와 계약 체결 및 대리•중개하는 간단손해보험대리점입니다.</li>
+                <li>카카오모빌리티㈜는 보험사로부터 보험계약체결권을 부여 받지 아니한 금융상품판매 대리중개업자임을 알려드립니다.</li>
+                <li>카카오모빌리티㈜ (등록번호 제:200000000000000호)</li>
+            </ul>
         </div>
 
 
@@ -282,7 +294,7 @@
                 <li>가. 피해자가 사망한 경우 : 3,000만원 한도로 지급 </li>
                 <li>
                     나. 중대법규위반 교통사고로 피해자가 42일 이상 진단을 받은 경우 
-                    <ul class="list-style-number">
+                    <ul class="list-style-number padding-left-38">
                         <li>42일 이상 70일 미만 진단 시 : 1,000만원 한도 실손 보상</li>
                         <li>70일 이상 140일 미만 진단 시 : 2,000만원 한도 실손 보상 </li>
                         <li>140일 이상 진단 시 : 3,000만원 한도 실손 보상 </li>
@@ -426,7 +438,7 @@
         </div>
     </div>
     <div class="modal-body" id="claim-guide-body">
-        <div class="content-box">
+        <!-- <div class="content-box"> -->
           <h3 class="modal-title">청구안내</h3>
 
             <table>
@@ -501,7 +513,7 @@
                 </tbody>
             </table>
 
-        </div>
+        <!-- </div> -->
 
         <h4 class="content-title">청구서류</h4>
 
@@ -578,11 +590,44 @@
             </div>
         
             <p class="content">해당 사항이 있다면 <br> 가입이 어렵습니다.</p>
-                <button class="btn btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">확인</button> 
-            <div class="button-box"></div>
-                
-                   
+            <button class="btn btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">확인</button>        
         </div>
     </div>
 </ng-template>
 
+
+<!-- alert Modal -->
+<ng-template #alertModal let-modal>
+
+    <div class="modal-body">
+        <div class="content-box">
+            
+            <div class="faCircleExclamation-box">
+                <fa-icon [icon]="faCircleExclamation"></fa-icon>
+            </div>
+        
+            <p class="content">{{alertMessage}}</p>
+            <button class="btn btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">확인</button>      
+        </div>
+    </div>
+</ng-template>
+
+<!-- 페이지 이동 Modal -->
+<ng-template #changePageChoiceModal let-modal>
+    <div class="modal-body">
+
+        <div class="content-box">
+            
+            <div class="faCircleExclamation-box">
+                <fa-icon [icon]="faCircleExclamation"></fa-icon>
+            </div>
+
+            <p class="content">작성 중이신 가입정보가 있습니다.<br>해당 정보로 이어서 진행하시겠습니까?</p>
+        
+            <div class="check-button-box">
+                <button class="btn check-button success-button button-font-sm" (click)="changePage()">예</button>
+                <button class="btn check-button fail-button button-font-sm" (click)="modal.dismiss('Cross click')">아니요,<br>처음부터 할게요.</button>    
+            </div>          
+        </div>
+    </div>
+</ng-template>
