KM디자인 변경요청 반영사항
폼입력시 텍스트반영

--- a/src/app/pages/join/user-form/user-form.component.scss
+++ b/src/app/pages/join/user-form/user-form.component.scss
@@ -75,12 +75,13 @@
     border: 1px solid red; /* green */
   }
 
-  .sticky-button-area{
+  .fixed-button-area{
     // width: 90%;
     position: fixed;
     bottom: 0px;
     left: 20px;
     right: 20px;
     background-color: white;
+    padding-top: 8px;
     padding-bottom: 20px;
 }
