--- a/src/app/pages/join/confirm/confirm.component.scss
+++ b/src/app/pages/join/confirm/confirm.component.scss
@@ -82,6 +82,7 @@ header, section {
         font-style: normal;
         font-weight: 400;       
         font-family: 'Roboto';
+        margin-bottom: 0;
     }
 }
 
@@ -161,4 +162,71 @@ header, section {
         }
     }
     
+}
+
+::ng-deep .my-class-contract-fail-modal .modal-dialog {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    .modal-content{
+        box-shadow: 0px 4px 16px 0px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        padding: 20px 10px 10px 10px;
+    }
+
+    .faCircleExclamation-box{
+        color: #DD3B3B;
+        text-align: center;
+        font-size: 36px;
+    }
+
+    .content{
+        font-weight: 700;
+        font-size: 18px;
+        color: #262D39;
+        text-align: center;
+    }
+
+    .btn-close{
+        width: 100%;
+        background: #3581FF;
+        border-radius: 4px;
+        color: white;
+        height: 52px;
+    }
+}
+
+::ng-deep .my-class-contract-success-modal .modal-dialog{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+
+    .modal-content{
+        box-shadow: 0px 4px 16px 0px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        padding: 20px 10px 10px 10px;
+    }
+
+    .faCircleCheck-box{
+        color: #3581FF;
+        text-align: center;
+        font-size: 36px;
+    }
+    
+    .content{
+        font-weight: 700;
+        font-size: 18px;
+        color: #262D39;
+        text-align: center;
+    }
+
+    .btn-close{
+        width: 100%;
+        background: #3581FF;
+        border-radius: 4px;
+        color: white;
+        height: 52px;
+    }
 }
