URL 분할 작업 시작
실질적으로 변경된 사항 없음

--- a/src/app/apps/join/join.component.html
+++ b/src/app/apps/join/join.component.html
@@ -10,7 +10,7 @@
     <section [ngSwitch]="PAGE">
         <page-insurance-information *ngSwitchCase="'insurance-information'"  [payload]="payload" (nextStep)="renewal($event)"></page-insurance-information>
         <page-user-form *ngSwitchCase="'user-form'" [payload]="payload" (nextStep)="renewal($event)"></page-user-form>
-        <page-confirm *ngSwitchCase="'confirm'" [payload]="payload" (changePage)="renewal($event)"></page-confirm>
+        <page-confirm *ngSwitchCase="'confirm'" [payload]="payload" (changePage)="renewal($event)" (moveBack)="moveBack()"></page-confirm>
 
     </section>
     
