--- a/src/app/apps/join/join.component.html
+++ b/src/app/apps/join/join.component.html
@@ -8,9 +8,9 @@
         
     </header>
     <section [ngSwitch]="PAGE">
-        <page-insurance-information *ngSwitchCase="'insurance-information'"  [payload]="payload" (nextStep)="renewal($event)"></page-insurance-information>
-        <page-user-form *ngSwitchCase="'user-form'" [payload]="payload" (nextStep)="renewal($event)"></page-user-form>
-        <page-confirm *ngSwitchCase="'confirm'" [payload]="payload" (changePage)="renewal($event)" (moveBack)="moveBack()"></page-confirm>
+        <page-insurance-information *ngSwitchCase="'insurance-information'"  [payload]="payload" [queryString_enc]="queryString_enc" (renewal)="renewal($event)"></page-insurance-information>
+        <page-user-form *ngSwitchCase="'user-form'" [payload]="payload" [queryString_enc]="queryString_enc" (renewal)="renewal($event)"></page-user-form>
+        <page-confirm *ngSwitchCase="'confirm'" [payload]="payload" [queryString_enc]="queryString_enc" (renewal)="renewal($event)"></page-confirm>
 
     </section>
     
