--- a/src/app/pages/join/user-form/user-form.component.html
+++ b/src/app/pages/join/user-form/user-form.component.html
@@ -1,4 +1,4 @@
-<main class="user-form-container">
+<main *ngIf="payload" class="user-form-container">
 
     <header class="header">
         피보험자 정보
