--- a/src/app/pages/join/confirm/confirm.component.scss
+++ b/src/app/pages/join/confirm/confirm.component.scss
@@ -107,6 +107,7 @@ header, section {
     position: sticky;
     bottom: 0px;
     background-color: white;
+    padding-top: 8px;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
@@ -209,10 +210,12 @@ header, section {
         padding: 20px 10px 10px 10px;
     }
 
-    .faCircleCheck-box{
+    .insurance-image-box{
         color: #3581FF;
         text-align: center;
         font-size: 36px;
+        position: relative;
+        bottom: 10px;
     }
     
     .content{
@@ -229,4 +232,10 @@ header, section {
         color: white;
         height: 52px;
     }
+}
+.iframeOff{
+    visibility: hidden;
+}
+.iframeOn{
+    visibility: initial;
 }
