--- a/src/app/pages/join/insurance-information/insurance-information.component.html
+++ b/src/app/pages/join/insurance-information/insurance-information.component.html
@@ -382,7 +382,8 @@
 
             <ul class="no-padding-left">
                 <li>본 상품은 직업 및 성별에 관계없이 보험료가 동일합니다. </li>
-                <li>회사가 정하는 기준에 의거 가입연령 및 건강 상태, 직무 등에 따라 보험가입 금액이 제한되거나 가입이 불가능할 수 있습니다.</li>
+                <li>회사가 정하는 기준에 의거 가입연령 및 직무 등에 따라 보험가입 금액이 제한되거나 가입이 불가능할 수 있습니다.</li>
+                <li>피보험자가 소유, 사용 또는 관리하는 다수의 이동통신단말기에 탑재된 앱에서 동시에 보험을 적용한 경우, 보험료가 중복 부과됩니다. 단, 보상한도는 상향됩니다.</li>
             </ul>
 
         </div>
@@ -421,6 +422,8 @@
                             <li>선박에 탑승하는 것을 직무로 하는 사람이 직무상 선박에 탑승하고 있는 동안 </li>
                         </ul>
                 </li>
+                <li>보험 가입에도 불구하고, 카카오내비앱을 통해 보험 적용을 하지 않은 경우</li>
+                <li>피보험자가 소유, 사용 또는 관리하는 이동통신단말기에 탑재된 카카오내비앱을 통해 피보험자 외 운전자가 보험적용을 한 경우</li>
             </ul>
             <p>보다 자세한 내용은 첨부된 약관을 참고해 주시기 바랍니다.</p>
         </div>
@@ -472,7 +475,7 @@
                             
                         </td>
                     </tr>
-                    <tr>
+                    <tr style="height: 48px;">
                         <td></td>
                         <td></td>
                         <td></td>
@@ -572,8 +575,8 @@
         
             <p class="sub-title">답변이 사실과 다를 경우, 보험 유지 및<br>보험금 지급이 거절될 수 있습니다.</p>
             <div class="check-button-box">
-                <button class="btn check-button fail-button" (click)="checkFail()">예</button>
-                <button class="btn check-button success-button" (click)="checkSuccess()">아니오</button>    
+                <button class="btn check-button fail-button left-button" (click)="checkFail()">예</button>
+                <button class="btn check-button success-button right-button" (click)="checkSuccess()">아니오</button>    
             </div>          
         </div>
     </div>
@@ -625,8 +628,8 @@
             <p class="content">작성 중이신 가입정보가 있습니다.<br>해당 정보로 이어서 진행하시겠습니까?</p>
         
             <div class="check-button-box">
-                <button class="btn check-button success-button button-font-sm" (click)="changePage()">예</button>
-                <button class="btn check-button fail-button button-font-sm" (click)="modal.dismiss('Cross click')">아니요,<br>처음부터 할게요.</button>    
+                <button class="btn check-button fail-button left-button" (click)="modal.dismiss('Cross click')">다시 작성</button>    
+                <button class="btn check-button success-button right-button" (click)="changePage()">네</button>
             </div>          
         </div>
     </div>
