--- a/src/app/pages/join/user-form/user-form.component.scss
+++ b/src/app/pages/join/user-form/user-form.component.scss
@@ -20,18 +20,25 @@
     height: 56px;
     width: 100%;
     border-radius: 4px;
-    background-color: #F8F8F8;
+    background: #F8F8F8;
+    outline: none;
     border: 1px solid rgba(38, 45, 57, 0.08);
     box-sizing: border-box;
     padding: 16px 12px 16px 16px
 }
 .input:focus{
+    -webkit-background:#F8F8F8;
+    -moz-background:#F8F8F8;
+    -moz-border : 1px solid #3581FF;
+    -webkit-border : 1px solid #3581FF;
+    -o-border: 1px solid #3581FF;
+    -moz-outline : none;
+    -webkit-outline : none;
     border:1px solid #3581FF;
+  
 }
 
 .next-button{
-    // border-radius: 4px;
-    // margin-top: 50px;
     background: #3581FF;
     height: 52px;
     width: 100%;
